--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
@@ -17,12 +18,13 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron">
-            Anytime is Train Time
+        <div class="bg"></div>
+        <div class="jumbotron text-center">
+            <h1>All Aboard!</h1>
         </div>
 
-        <div class="panel panel-default">
-            <div class="panel-heading"><h3 class="panel-title">Current Train Schedule</h3></div>
+        <div class="panel panel-default schedule info">
+            <div class="panel-heading schedule"><h3 class="panel-title text-center title">TRAIN INFORMATION</h3></div>
             <div class="panel-body">
                 <table class="table">
                     <thead>
@@ -39,7 +41,7 @@
             </div>
         </div>
 
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">Add Train</h3>
             </div>
@@ -61,7 +63,7 @@
                         <label for="frequencyInput">Frequency (min)</label>
                         <input type="text" class="form-control" id="frequencyInput">
                     </div>
-                    <button type="submit" class="btn btn-default" id="submitInput">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="submitInput">Submit</button>
                 </form>
             </div>
         </div>
